fixing picture issue on mobile device in the shows

--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -11,11 +11,18 @@
     font-family: var(--ff-handwrite);
     font-size: var(--fs-xl);
   }
+  .description {
+    width: 80%;
+    margin: 10px auto;
+  }
+  .btn-grey {
+    margin: 10px 0 0 0;
+  }
 }
 
 .pic {
-  width: calc(100%-20px);
-  margin: 10px;
+  width: 100%;
+  margin: 8px 0;
   height: auto;
 }
 
@@ -23,5 +30,6 @@
   .pic {
     width: auto;
     height: 45vh;
+    margin: 8px;
   }
 }
